--- a/provas/p1_2025.1/index.html
+++ b/provas/p1_2025.1/index.html
@@ -18,7 +18,7 @@
         <div class="carrinho">
             <a href="carrinho.html">
                 <span id="carrinho-contagem">0</span>
-                <img class="carrinho__imagem" src="cart-icon.png" alt="Carrinho de Compras">
+                <img class="carrinho__imagem" src="img/cart-icon.png" alt="Carrinho de Compras">
             </a>
         </div>
     </header>
@@ -28,7 +28,7 @@
                 <img class="produtos-card__imagem" src="img/notebook.jpg" alt="Notebook">
                 <h2 class="produtos-card__titulo">Notebook</h2>
                 <div class="produtos-card__preco-container"> 
-                    <p class="produtos-card__preco-icon"></p>
+                    <p class="produtos-card__preco-icon">%</p>
                     <p class="produtos-card__preco">R$ 3.500,00</p>
                 </div>
                 <button class="produtos-card__botao" onclick="adicionaAoCarrinho('Notebook', 3500)">Adicionar ao Carrinho</button>
@@ -61,7 +61,7 @@
                 <img class="produtos-card__imagem" src="img/tablet.jpg" alt="Tablet">
                 <h2 class="produtos-card__titulo">Tablet</h2>
                 <div class="produtos-card__preco-container"> 
-                    <p class="produtos-card__preco-icon"></p>
+                    <p class="produtos-card__preco-icon">%</p>
                     <p class="produtos-card__preco">R$ 2.350,00</p>
                 </div>
                 <button class="produtos-card__botao" onclick="adicionaAoCarrinho('Tablet', 2350)">Adicionar ao Carrinho</button>
